services/api/products-mongo/deployment/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: products-mongo-deployment
  labels:
    app: products-mongo
spec:
  selector:
    matchLabels:
      app: products-mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: products-mongo
    spec:
      containers:
        - image: products-mongo:1
          name: products-mongo
          ports:
            - containerPort: 3000
              name: products-mongo
      restartPolicy: Always
---
