services/api/products-mongo/deployment/istio.yaml
# ---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-products-mongo-vs
spec:
  hosts:
    - "*"
  gateways:
    - gateway-ingress-http
  http:
    - match:
        - uri:
            prefix: /products-mongo
      rewrite:
        uri: "/"
      route:
        - destination:
            host: products-mongo-srv
          # weight: 100
---
apiVersion: v1
kind: Service
metadata:
  name: products-mongo-srv
  labels:
    app: products-mongo
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      name: http
  selector:
    app: products-mongo
